# Pythia

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  slack-app-manifest.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
deploy/helm/pythia/: Chart.yaml  values.yaml
deploy/helm/pythia/templates/: _helpers.tpl  deployment.yaml  secret.yaml
examples/: README.md  system-prompt.example.md
examples/mcp-servers/: kitchen-sink.json  minimal.json
src/pythia/: __main__.py  agent.py  app.py  codebase.py  config.py  health.py  mcp_servers.py  slack_files.py  slack_format.py  slack_thread.py
tests/: conftest.py  test_agent.py  test_app.py  test_codebase.py  test_health.py  test_mcp_servers.py  test_slack_files.py  test_slack_format.py  test_slack_thread.py  test_smoke.py
