[project]
name = "pythia"
version = "0.0.1"
description = "Open-source Slack bot that connects an LLM to arbitrary MCP servers"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "SixTwoDev" }]
dependencies = [
    "slack-bolt>=1.21",
    "pydantic-settings>=2.6",
    "pydantic-ai-slim[mcp,openai]>=1.93.0",
    "aiohttp>=3.13.5",
    "pillow>=12.2.0",
]

[project.scripts]
pythia = "pythia.__main__:cli"
pythia-healthcheck = "pythia.health:healthcheck_cli"

[project.urls]
Homepage = "https://github.com/SixTwoDev/Pythia"
Issues = "https://github.com/SixTwoDev/Pythia/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pythia"]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pyright>=1.1.390",
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
asyncio_mode = "auto"
